src/test/ui/resolve/issue-17518.stderr
error[E0422]: cannot find struct, variant or union type `E` in this scope
  --> $DIR/issue-17518.rs:16:5
   |
16 |     E { name: "foobar" }; //~ ERROR unresolved struct, variant or union type `E`
   |     ^ not found in this scope
   |
   = help: possible candidate is found in another module, you can import it into scope:
             `use SomeEnum::E;`

error: aborting due to previous error

